--- a/index.html
+++ b/index.html
@@ -240,14 +240,14 @@
 
 
 
-           <img src="./public/Aviso_EPI.jpg" alt="slide-3.jpg">
-            <img src="./public/Fofoca.png" alt="slide-4.jpg">
-            <img src="./public/Reduza barulhos_.png" alt="slide-5.jpg">
-            <img src="./public/Resolva_Conflitos.png" alt="slide-6.jpg">
-            <img src="./public/Respeito.png" alt="slide-7.jpg">
-            <img src="./public/salaconvivencia.jpg" alt="slide-8.jpg">
-            <img src="./public/sobrecopa.jpg" alt="slide-9.jpg">
-            <img src="./public/Trabalhar_Em_Equipe.png" alt="slide-10.jpg">
+           <img src="./Aviso_EPI.jpg" alt="slide-3.jpg">
+            <img src="./Fofoca.png" alt="slide-4.jpg">
+            <img src="./Reduza barulhos_.png" alt="slide-5.jpg">
+            <img src="./Resolva_Conflitos.png" alt="slide-6.jpg">
+            <img src="./Respeito.png" alt="slide-7.jpg">
+            <img src="./salaconvivencia.jpg" alt="slide-8.jpg">
+            <img src="./sobrecopa.jpg" alt="slide-9.jpg">
+            <img src="./Trabalhar_Em_Equipe.png" alt="slide-10.jpg">
 
             <div class="seta arrow-right"><i class="fas fa-chevron-circle-right"></i></div>
 
