--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <body>
     <div class="header">
         <div id="compos">
-            <img src="./public/LOGO-COMPOS.svg" alt="Foto do perfil,Imagem não suportada pelo seu navegador" />
+            <img src="./LOGO-COMPOS.svg" alt="Foto do perfil,Imagem não suportada pelo seu navegador" />
             <div id="data-hora">
                 <div id="horario"></div>
                 <div id="dia"></div>
